--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
                       <li><a href="index-3.html">Homepage 3</a></li>
                     </ul>
                   </li>
-                  <li><a href="pages/about-us.html">About</a></li>
-                  <li><a href="pages/services.html">Services</a></li>
-                  <li><a href="pages/work.html">work</a></li>
-                  <li><a href="pages/news.html">News</a></li>
+                  <li><a href="about-us.html">About</a></li>
+                  <li><a href="services.html">Services</a></li>
+                  <li><a href="work.html">work</a></li>
+                  <li><a href="news.html">News</a></li>
                   <li><a href="#">Shop</a></li>
                   <li><a href="index-2.html#career">Careers</a></li>
                 </ul>
@@ -291,7 +291,7 @@
         </div>
       </div>
     <div class="col-xl-12 portfolio-button text-center">
-      <a href="pages/work-details.html"><button>All Projects</button></a>
+      <a href="work-details.html"><button>All Projects</button></a>
     </div>
     </div>
   </div>
@@ -467,11 +467,11 @@
               <h4>Usefull links</h4>
               <ul class="footer-link">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="pages/about-us.html">About Us</a></li>
-                <li><a href="pages/services.html">Services</a></li>
-                <li><a href="pages/work-details.html">Single Service</a></li>
-                <li><a href="pages/work.html">Work</a></li>
-                <li><a href="pages/news.html">Blogs</a></li>
+                <li><a href="about-us.html">About Us</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="work-details.html">Single Service</a></li>
+                <li><a href="work.html">Work</a></li>
+                <li><a href="news.html">Blogs</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">Support</a></li>
                 <li><a href="index-2.html#career">Career</a></li>
