--- a/news.html
+++ b/news.html
@@ -152,7 +152,7 @@
         <div class="blog-post-v2 col-xl-4">
           <img src="img/blog/blog-post-1.jpg" alt="Post 1">
           <div class="blog-title">
-           <a href="#"><h2>How to Improve Your<br>Sales Volume</h2></a>
+           <h2><a href="#">How to Improve Your<br>Sales Volume</a></h2>
            <div class="blog-meta-news">07 May</div>
           </div>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
@@ -160,7 +160,7 @@
         <div class="blog-post-v2 col-xl-4">
           <img src="img/blog/blog-post-2.jpg" alt="Post 2">
           <div class="blog-title">
-           <a href="#"><h2>How to Improve Your<br>Sales Volume</h2></a>
+           <h2><a href="#">How to Improve Your<br>Sales Volume</a></h2>
            <div class="blog-meta-news">07 May</div>
           </div>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
@@ -168,7 +168,7 @@
         <div class="blog-post-v2 col-xl-4">
           <img src="img/blog/blog-post-3.jpg" alt="Post 3">
           <div class="blog-title">
-           <a href="#"><h2>How to Improve Your<br>Sales Volume</h2></a>
+           <h2><a href="#">How to Improve Your<br>Sales Volume</a></h2>
            <div class="blog-meta-news">07 May</div>
           </div>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
@@ -178,7 +178,7 @@
         <div class="blog-post-v2 col-xl-4">
           <img src="img/blog/blog-post-1.jpg" alt="Post 1">
           <div class="blog-title">
-           <a href="#"><h2>How to Improve Your<br>Sales Volume</h2></a>
+           <h2><a href="#">How to Improve Your<br>Sales Volume</a></h2>
            <div class="blog-meta-news">07 May</div>
           </div>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
@@ -186,7 +186,7 @@
         <div class="blog-post-v2 col-xl-4">
           <img src="img/blog/blog-post-2.jpg" alt="Post 2">
           <div class="blog-title">
-           <a href="#"><h2>How to Improve Your<br>Sales Volume</h2></a>
+           <h2><a href="#">How to Improve Your<br>Sales Volume</a></h2>
            <div class="blog-meta-news">07 May</div>
           </div>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
@@ -194,7 +194,7 @@
         <div class="blog-post-v2 col-xl-4">
           <img src="img/blog/blog-post-3.jpg" alt="Post 3">
           <div class="blog-title">
-           <a href="#"><h2>How to Improve Your<br>Sales Volume</h2></a>
+           <h2><a href="#">How to Improve Your<br>Sales Volume</a></h2>
            <div class="blog-meta-news">07 May</div>
           </div>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
