careers page created

--- a/careers.html
+++ b/careers.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en-us">
 <head>
   <meta charset="utf-8">
-  <title>Work - PSD to HTML Practice</title>
+  <title>Careers - PSD to HTML Practice</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -134,8 +134,8 @@
           <div class="row p-0">
             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
               <div class="hero-content">
-                <h2>Work</h2>
-                <p>Home  /  Work</p>
+                <h2>Careers</h2>
+                <p>Home  /  Careers</p>
               </div>
             </div>
           </div>
@@ -146,101 +146,56 @@
   <!----------------------- End of Title & Breadcrumb ----------------------->
 
   <!----------------------- Start of Portfolio ----------------------->
-  <div class="portfolio-section mt-5">
+  <div class="careers-section">
     <div class="container">
+      <div class="row text-center mb-5">
+        <div class="col-xl-12"><h2>Why Work For Us?</h2></div>
+      </div>
+      <div class="row row text-center mb-4">
+        <div class="col-xl-4">
+          <div class="icon-ico rounded-circle mb-4"><i class="fa-solid fa-utensils"></i></div>
+          <h3>Catered Meals</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis quidem facilis nostrum debitis!</p>
+        </div>
+        <div class="col-xl-4">
+          <div class="icon-ico rounded-circle mb-4"><i class="fa-solid fa-suitcase-medical"></i></i></div>
+          <h3>Company Offsites</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis quidem facilis nostrum debitis!</p>
+        </div>
+        <div class="col-xl-4">
+          <div class="icon-ico rounded-circle mb-4"><i class="fa-solid fa-umbrella"></i></div>
+          <h3>Wellness Allowance</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis quidem facilis nostrum debitis!</p>
+        </div>
+      </div>
       <div class="row">
-        <div class="col-xl-12">
-          <div class="portfolio-top text-center mt-5">
-            <h2>Recent Projects</h2>
-            <ul class="portfolio-menu">
-              <li class="active" data-filter="*">All</li>
-              <li data-filter=".c1">BUILDINGS</li>
-              <li data-filter=".c2">FAMILY</li>
-              <li data-filter=".c3">HOUSEGREEN</li>
-              <li data-filter=".c4">BUILDING</li>
-              <li data-filter=".c5">INTERIOR</li>
-              <li data-filter=".c6">OFFICE</li>
-            </li>
+        <div class="col-xl-4">
+          <div class="job-details">
+            <h3>Job Title</h3>
+            <ul>
+              <li>Senior Finance Consultant</li>
+              <li>Junior PR-manager</li>
+              <li>Business Development Executive</li>
+              <li>Social Media marketer</li>
+              <li>Chief Finance Officer</li>
+            </ul>
           </div>
+        </div>
+        <div class="col-xl-8">
+          <h3>Job Summary</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda atque aut eius vel! Sed, laboriosam. Quaerat vel quisquam voluptatem neque aspernatur, quas odio ab assumenda commodi quia! Ab natus dolor cum aut a maxime quibusdam ipsa iusto explicabo quasi ut rerum sint labore hic, nihil nobis tempora tempore soluta, temporibus fugiat? Earum magnam, pariatur doloribus quasi ex error corrupti molestias veritatis deserunt blanditiis! Asperiores exercitationem facere magnam. Excepturi dicta hic expedita doloribus necessitatibus illum magni distinctio?</p>
+          <h3>Description</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda atque aut eius vel! Sed, laboriosam. Quaerat vel quisquam voluptatem neque aspernatur, quas odio ab assumenda commodi quia! Ab natus dolor cum aut a maxime quibusdam ipsa iusto explicabo quasi ut rerum sint labore hic, nihil nobis tempora tempore soluta, temporibus fugiat? Earum magnam, pariatur doloribus quasi ex error corrupti molestias veritatis deserunt blanditiis! Asperiores exercitationem facere magnam. Excepturi dicta hic expedita doloribus necessitatibus illum magni distinctio? Ab, perferendis accusamus cupiditate rerum, doloribus sapiente unde architecto voluptatum inventore eligendi asperiores blanditiis porro deleniti voluptas tempore ipsa?</p>
+          <h3>Requirements</h3>
+          <ul class="job-requires">
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit ipsa eligendi recusandae.</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit ipsa eligendi recusandae placeat nostrum.</li>
+            <li>Lorem ipsum dolor si t amet consectetur adipisicing elit. Suscipit ipsa eligendi recusandae placeat nostrum vitae tempore.</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit ipsa eligendi recusandae placeat nostrum vitae tempore corrupti architecto?</li>
+          </ul>
+          <p><b>Please, Send your CV to</b> careers@example.com</p>
         </div>
       </div>
-      <div class="row masonry">
-        <div class="col-xl-4 col-lg-4 col-md-6 masonry-item c1 c4">
-          <div class="portfolio-wrapper">
-            <div class="portfolio-img">
-              <img src="img/portfolio/project1.jpg" alt="Project 1">
-            </div>
-            <div class="portfolio-content">
-              <a class="portfolio-img-popup" href="img/portfolio/project1.jpg"><i class="fa-solid fa-plus"></i></a>
-              <h4>Aplumber Repairs Pipes</h4>
-              <p>Buildings, Office</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-4 col-lg-4 col-md-6 masonry-item c2 c5">
-          <div class="portfolio-wrapper">
-            <div class="portfolio-img">
-              <img src="img/portfolio/project2.jpg" alt="Project 2">
-            </div>
-            <div class="portfolio-content">
-              <a class="portfolio-img-popup" href="img/portfolio/project2.jpg"><i class="fa-solid fa-plus"></i></a>
-              <h4>Aplumber Repairs Pipes</h4>
-              <p>Buildings, Office</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-4 col-lg-4 col-md-6 masonry-item c3 c6">
-          <div class="portfolio-wrapper">
-            <div class="portfolio-img">
-              <img src="img/portfolio/project3.jpg" alt="Project 3">
-            </div>
-            <div class="portfolio-content">
-              <a class="portfolio-img-popup" href="img/portfolio/project3.jpg"><i class="fa-solid fa-plus"></i></a>
-              <h4>Aplumber Repairs Pipes</h4>
-              <p>Buildings, Office</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-4 col-lg-4 col-md-6 masonry-item c4 c1">
-          <div class="portfolio-wrapper">
-            <div class="portfolio-img">
-              <img src="img/portfolio/project4.jpg" alt="Project 4">
-            </div>
-            <div class="portfolio-content">
-              <a class="portfolio-img-popup" href="img/portfolio/project4.jpg"><i class="fa-solid fa-plus"></i></a>
-              <h4>Aplumber Repairs Pipes</h4>
-              <p>Buildings, Office</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-4 col-lg-4 col-md-6 masonry-item c5 c2">
-          <div class="portfolio-wrapper">
-            <div class="portfolio-img">
-              <img src="img/portfolio/project6.jpg" alt="Project 6">
-            </div>
-            <div class="portfolio-content">
-              <a class="portfolio-img-popup" href="img/portfolio/project6.jpg"><i class="fa-solid fa-plus"></i></a>
-              <h4>Aplumber Repairs Pipes</h4>
-              <p>Buildings, Office</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-4 col-lg-4 col-md-6 masonry-item c6 c3">
-          <div class="portfolio-wrapper">
-            <div class="portfolio-img">
-              <img src="img/portfolio/project5.jpg" alt="Project 5">
-            </div>
-            <div class="portfolio-content">
-              <a class="portfolio-img-popup" href="img/portfolio/project5.jpg"><i class="fa-solid fa-plus"></i></a>
-              <h4>Aplumber Repairs Pipes</h4>
-              <p>Buildings, Office</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    <div class="col-xl-12 portfolio-button text-center">
-      <a href="work-details.html"><button>All Projects</button></a>
-    </div>
     </div>
   </div>
   <!----------------------- End of Portfolio ----------------------->
