--- a/index-3.html
+++ b/index-3.html
@@ -77,8 +77,8 @@
                   <li><a href="services.html">Services</a></li>
                   <li><a href="work.html">work</a></li>
                   <li><a href="news.html">News</a></li>
-                  <li><a href="#">Shop</a></li>
-                  <li><a href="index-3.html#career">Careers</a></li>
+                  <li><a href="shop.html">Shop</a></li>
+                  <li><a href="careers.html">Careers</a></li>
                 </ul>
               </nav>
             </div>
@@ -602,7 +602,7 @@
                 <li><a href="news.html">Blogs</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">Support</a></li>
-                <li><a href="index-2.html#career">Career</a></li>
+                <li><a href="careers.html">Career</a></li>
                 <li><a href="#">Privacy Policy</a></li>
               </ul>
             </div>
