--- a/work-details.html
+++ b/work-details.html
@@ -90,8 +90,8 @@
                   <li><a href="services.html">Services</a></li>
                   <li><a href="work.html">work</a></li>
                   <li><a href="news.html">News</a></li>
-                  <li><a href="#">Shop</a></li>
-                  <li><a href="index-2.html#career">Careers</a></li>
+                  <li><a href="shop.html">Shop</a></li>
+                  <li><a href="careers.html">Careers</a></li>
                 </ul>
               </nav>
             </div>
@@ -135,7 +135,7 @@
             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
               <div class="hero-content">
                 <h2>Work Details</h2>
-                <p>Home  /  Work Details</p>
+                <p>Home  /  Work  /  Work Details</p>
               </div>
             </div>
           </div>
@@ -264,7 +264,7 @@
                 <li><a href="news.html">Blogs</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">Support</a></li>
-                <li><a href="index-2.html#career">Career</a></li>
+                <li><a href="careers.html">Career</a></li>
                 <li><a href="#">Privacy Policy</a></li>
               </ul>
             </div>
