contact page created

--- a/index-2.html
+++ b/index-2.html
@@ -580,7 +580,7 @@
                 <li><a href="work-details.html">Single Service</a></li>
                 <li><a href="work.html">Work</a></li>
                 <li><a href="news.html">Blogs</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li><a href="#">Support</a></li>
                 <li><a href="careers.html">Career</a></li>
                 <li><a href="#">Privacy Policy</a></li>
