--- a/services.html
+++ b/services.html
@@ -95,7 +95,7 @@
                 </ul>
               </nav>
             </div>
-            <div class="header-btn"><a href="#">Get a quote</a></div>
+            <div class="header-btn"><a href="contact.html">Get a quote</a></div>
           </div>
         </div>
         <div class="mean-menu-custom">
@@ -265,7 +265,7 @@
                 <li><a href="work-details.html">Single Service</a></li>
                 <li><a href="work.html">Work</a></li>
                 <li><a href="news.html">Blogs</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li><a href="#">Support</a></li>
                 <li><a href="careers.html">Career</a></li>
                 <li><a href="#">Privacy Policy</a></li>
