--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en-us">
 <head>
   <meta charset="utf-8">
-  <title>News - PSD to HTML Practice</title>
+  <title>Contact - PSD to HTML Practice</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -134,8 +134,8 @@
           <div class="row p-0">
             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
               <div class="hero-content">
-                <h2>News</h2>
-                <p>Home  /  News</p>
+                <h2>Contact</h2>
+                <p>Home  /  Contact</p>
               </div>
             </div>
           </div>
@@ -145,75 +145,94 @@
   </div>
   <!----------------------- End of Title & Breadcrumb ----------------------->
 
-  <!----------------------- Start of Recent Posts ----------------------->
-  <div class="recent-posts-v2" id="blog">
+  <!----------------------- Start of Portfolio ----------------------->
+  <div class="contact-us">
     <div class="container">
-      <div class="row mb-2">
-        <div class="blog-post-v2 col-xl-4">
-          <img src="img/blog/blog-post-1.jpg" alt="Post 1">
-          <div class="blog-title">
-           <h2><a href="#">How to Improve Your<br>Sales Volume</a></h2>
-           <div class="blog-meta-news">07 May</div>
-          </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-        </div>
-        <div class="blog-post-v2 col-xl-4">
-          <img src="img/blog/blog-post-2.jpg" alt="Post 2">
-          <div class="blog-title">
-           <h2><a href="#">How to Improve Your<br>Sales Volume</a></h2>
-           <div class="blog-meta-news">07 May</div>
-          </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-        </div>
-        <div class="blog-post-v2 col-xl-4">
-          <img src="img/blog/blog-post-3.jpg" alt="Post 3">
-          <div class="blog-title">
-           <h2><a href="#">How to Improve Your<br>Sales Volume</a></h2>
-           <div class="blog-meta-news">07 May</div>
-          </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-        </div>
-      </div>
       <div class="row">
-        <div class="blog-post-v2 col-xl-4">
-          <img src="img/blog/blog-post-1.jpg" alt="Post 1">
-          <div class="blog-title">
-           <h2><a href="#">How to Improve Your<br>Sales Volume</a></h2>
-           <div class="blog-meta-news">07 May</div>
+        <div class="col-xl-6">
+          <div class="contact-form">
+            <h4>Do you have any question?</h4>
+            <form action="#">
+              <div class="row">
+                <div class="col-xl-6">
+                  <input type="text" placeholder="Name">
+                </div>
+                <div class="col-xl-6">
+                  <input type="email" placeholder="Email">
+                </div>
+                <div class="col-xl-12">
+                  <textarea name="message" id="message" cols="30" rows="10" placeholder="Message"></textarea>
+                  <button type="submit">Send message</button>
+                </div>
+              </div>
+            </form>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
         </div>
-        <div class="blog-post-v2 col-xl-4">
-          <img src="img/blog/blog-post-2.jpg" alt="Post 2">
-          <div class="blog-title">
-           <h2><a href="#">How to Improve Your<br>Sales Volume</a></h2>
-           <div class="blog-meta-news">07 May</div>
+        <div class="col-xl-6">
+          <div class="contact-details">
+            <span>Contact</span>
+            <h2>keep in touch</h2>
+            <div class="contact-meta">
+              <div class="row">
+                <div class="col-xl-6">
+                  <h4>Phone</h4>
+                  <p>+ 38 098 236 75 36;</p>
+                  <p>+ 38 098 236 75 38</p>
+                </div>
+                <div class="col-xl-6">
+                  <h4>E-mail</h4>
+                  <p>infor@bloom.com;</p>
+                  <p>admin@bloom.com</p>
+                </div>
+              </div>
+            </div>
+            <h4>Address</h4>
+            <p>319 Clematis St.Suite 100 WPB, FL 33401</p>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-        </div>
-        <div class="blog-post-v2 col-xl-4">
-          <img src="img/blog/blog-post-3.jpg" alt="Post 3">
-          <div class="blog-title">
-           <h2><a href="#">How to Improve Your<br>Sales Volume</a></h2>
-           <div class="blog-meta-news">07 May</div>
-          </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-xl-12">
-          <nav class="news-nav" aria-label="Page navigation">
-            <ul class="pagination justify-content-center">
-              <li class="page-item" data-filter=".p1"><a class="page-link" href="#">1</a></li>
-              <li class="page-item" data-filter=".p2"><a class="page-link" href="#">2</a></li>
-              <li class="page-item"><a class="page-link" href="#"><i class="fa-solid fa-chevron-right"></i></a></li>
-            </ul>
-          </nav>
         </div>
       </div>
     </div>
   </div>
-  <!----------------------- End of Recent Posts ----------------------->
+  <!----------------------- End of Portfolio ----------------------->
+
+  <!----------------------- Start of Counter ----------------------->
+  <div class="counter-variant-4 mb-4">
+    <div class="counter-section">
+      <div class="container">
+        <div class="row counter-height d-flex align-items-center">
+          <div class="counter-item col-xl-3 col-lg-3 col-md-3 col-sm-3 text-center">
+            <div class="counter-icon">
+              <img src="img/counter/icon1.png" alt="">
+            </div>
+            <h4 class="counter-number">5120</h4>
+            <p>happy customers</p>
+          </div>
+          <div class="counter-item col-xl-3 col-lg-3 col-md-3 col-sm-3 text-center">
+            <div class="counter-icon">
+              <img src="img/counter/icon2.png" alt="">
+            </div>
+            <h4 class="counter-number">4315</h4>
+            <p>completed projects</p>
+          </div>
+          <div class="counter-item col-xl-3 col-lg-3 col-md-3 col-sm-3 text-center">
+            <div class="counter-icon">
+              <img src="img/counter/icon3.png" alt="">
+            </div>
+            <h4 class="counter-number">1200</h4>
+            <p>best engineers</p>
+          </div>
+          <div class="counter-item col-xl-3 col-lg-3 col-md-3 col-sm-3 text-center">
+            <div class="counter-icon">
+              <img src="img/counter/icon4.png" alt="">
+            </div>
+            <h4 class="counter-number">98</h4>
+            <p>our branches</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!----------------------- End of Counter ----------------------->
 
   <!----------------------- Start of Footer ----------------------->
   <footer>
