--- a/index-3.html
+++ b/index-3.html
@@ -432,7 +432,7 @@
   <!----------------------- End of Counter ----------------------->
 
   <!----------------------- Start of Recent Posts ----------------------->
-  <div class="blog-v3 recent-posts" id="blog">
+  <div class="blog-v3 recent-posts">
     <div class="container">
       <div class="row blog-slider">
           <div class="blog-post">
