--- a/news.html
+++ b/news.html
@@ -146,7 +146,7 @@
   <!----------------------- End of Title & Breadcrumb ----------------------->
 
   <!----------------------- Start of Recent Posts ----------------------->
-  <div class="recent-posts-v2" id="blog">
+  <div class="recent-posts-v2">
     <div class="container">
       <div class="row mb-2">
         <div class="blog-post-v2 col-xl-4">
