--- a/shop.html
+++ b/shop.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en-us">
 <head>
   <meta charset="utf-8">
-  <title>News - PSD to HTML Practice</title>
+  <title>Shop - PSD to HTML Practice</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -134,8 +134,8 @@
           <div class="row p-0">
             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
               <div class="hero-content">
-                <h2>News</h2>
-                <p>Home  /  News</p>
+                <h2>Shop</h2>
+                <p>Home  /  Shop</p>
               </div>
             </div>
           </div>
@@ -146,7 +146,7 @@
   <!----------------------- End of Title & Breadcrumb ----------------------->
 
   <!----------------------- Start of Recent Posts ----------------------->
-  <div class="recent-posts-v2" id="blog">
+  <div class="recent-posts-v2">
     <div class="container">
       <div class="row mb-2">
         <div class="blog-post-v2 col-xl-4">
