--- a/index-2.html
+++ b/index-2.html
@@ -487,7 +487,7 @@
   <!----------------------- End of Testimonial ----------------------->
 
   <!----------------------- Start of Recent Posts ----------------------->
-  <div class="recent-posts-v2" id="blog">
+  <div class="recent-posts-v2">
     <div class="container">
       <div class="row">
         <div class="col-xl-12 blog-head text-center">
