--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
   <!----------------------- End of Counter ----------------------->
 
   <!----------------------- Start of Recent Posts ----------------------->
-  <div class="recent-posts" id="blog">
+  <div class="recent-posts">
     <div class="container">
       <div class="row blog-slider">
           <div class="blog-post">
