shop page added

--- a/shop.html
+++ b/shop.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="css/responsive.css">
   <link rel="stylesheet" href="css/fontawesome.min.css">
   <link rel="stylesheet" href="css/meanmenu.css">
+  <link rel="stylesheet" href="css/nice-select.css">
 
   <meta name="theme-color" content="#ff5400">
 </head>
@@ -145,66 +146,176 @@
   </div>
   <!----------------------- End of Title & Breadcrumb ----------------------->
 
-  <!----------------------- Start of Recent Posts ----------------------->
-  <div class="recent-posts-v2">
+  <!----------------------- Start of Shop ----------------------->
+  <div class="shop">
     <div class="container">
-      <div class="row mb-2">
-        <div class="blog-post-v2 col-xl-4">
-          <img src="img/blog/blog-post-1.jpg" alt="Post 1">
-          <div class="blog-title">
-           <h2><a href="#">How to Improve Your<br>Sales Volume</a></h2>
-           <div class="blog-meta-news">07 May</div>
-          </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+      <div class="row product-sort">
+        <div class="col-xl-6">
+          <p>Showing 1-20 of 75 results</p>
         </div>
-        <div class="blog-post-v2 col-xl-4">
-          <img src="img/blog/blog-post-2.jpg" alt="Post 2">
-          <div class="blog-title">
-           <h2><a href="#">How to Improve Your<br>Sales Volume</a></h2>
-           <div class="blog-meta-news">07 May</div>
+        <div class="col-xl-6">
+          <div class="product-filter">
+            <select name="select" id="select">
+              <option value="">Sort by : Default sorting</option>
+              <option value="">Sorting A</option>
+              <option value="">Sorting B</option>
+              <option value="">Sorting C</option>
+              <option value="">Sorting D</option>
+            </select>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-        </div>
-        <div class="blog-post-v2 col-xl-4">
-          <img src="img/blog/blog-post-3.jpg" alt="Post 3">
-          <div class="blog-title">
-           <h2><a href="#">How to Improve Your<br>Sales Volume</a></h2>
-           <div class="blog-meta-news">07 May</div>
-          </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
         </div>
       </div>
       <div class="row">
-        <div class="blog-post-v2 col-xl-4">
-          <img src="img/blog/blog-post-1.jpg" alt="Post 1">
-          <div class="blog-title">
-           <h2><a href="#">How to Improve Your<br>Sales Volume</a></h2>
-           <div class="blog-meta-news">07 May</div>
+        <div class="col-xl-3">
+          <div class="product">
+            <div class="product-img">
+              <img src="img/gallery/product-1.jpg" alt="Product">
+              <div class="add-to-cart-ico">
+                <i class="fa-solid fa-cart-shopping"></i>
+              </div>
+            </div>
+            <h4>Colour Roller</h4>
+            <span>$12.00</span>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
         </div>
-        <div class="blog-post-v2 col-xl-4">
-          <img src="img/blog/blog-post-2.jpg" alt="Post 2">
-          <div class="blog-title">
-           <h2><a href="#">How to Improve Your<br>Sales Volume</a></h2>
-           <div class="blog-meta-news">07 May</div>
+        <div class="col-xl-3">
+          <div class="product">
+            <div class="product-img">
+              <img src="img/gallery/product-1.jpg" alt="Product">
+              <div class="add-to-cart-ico">
+                <i class="fa-solid fa-cart-shopping"></i>
+              </div>
+            </div>
+            <h4>Colour Roller</h4>
+            <span>$12.00</span>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
         </div>
-        <div class="blog-post-v2 col-xl-4">
-          <img src="img/blog/blog-post-3.jpg" alt="Post 3">
-          <div class="blog-title">
-           <h2><a href="#">How to Improve Your<br>Sales Volume</a></h2>
-           <div class="blog-meta-news">07 May</div>
+        <div class="col-xl-3">
+          <div class="product">
+            <div class="product-img">
+              <img src="img/gallery/product-1.jpg" alt="Product">
+              <div class="add-to-cart-ico">
+                <i class="fa-solid fa-cart-shopping"></i>
+              </div>
+            </div>
+            <h4>Colour Roller</h4>
+            <span>$12.00</span>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+        </div>
+        <div class="col-xl-3">
+          <div class="product">
+            <div class="product-img">
+              <img src="img/gallery/product-1.jpg" alt="Product">
+              <div class="add-to-cart-ico">
+                <i class="fa-solid fa-cart-shopping"></i>
+              </div>
+            </div>
+            <h4>Colour Roller</h4>
+            <span>$12.00</span>
+          </div>
+        </div>
+        <div class="col-xl-3">
+          <div class="product">
+            <div class="product-img">
+              <img src="img/gallery/product-1.jpg" alt="Product">
+              <div class="add-to-cart-ico">
+                <i class="fa-solid fa-cart-shopping"></i>
+              </div>
+            </div>
+            <h4>Colour Roller</h4>
+            <span>$12.00</span>
+          </div>
+        </div>
+        <div class="col-xl-3">
+          <div class="product">
+            <div class="product-img">
+              <img src="img/gallery/product-1.jpg" alt="Product">
+              <div class="add-to-cart-ico">
+                <i class="fa-solid fa-cart-shopping"></i>
+              </div>
+            </div>
+            <h4>Colour Roller</h4>
+            <span>$12.00</span>
+          </div>
+        </div>
+        <div class="col-xl-3">
+          <div class="product">
+            <div class="product-img">
+              <img src="img/gallery/product-1.jpg" alt="Product">
+              <div class="add-to-cart-ico">
+                <i class="fa-solid fa-cart-shopping"></i>
+              </div>
+            </div>
+            <h4>Colour Roller</h4>
+            <span>$12.00</span>
+          </div>
+        </div>
+        <div class="col-xl-3">
+          <div class="product">
+            <div class="product-img">
+              <img src="img/gallery/product-1.jpg" alt="Product">
+              <div class="add-to-cart-ico">
+                <i class="fa-solid fa-cart-shopping"></i>
+              </div>
+            </div>
+            <h4>Colour Roller</h4>
+            <span>$12.00</span>
+          </div>
+        </div>
+        <div class="col-xl-3">
+          <div class="product">
+            <div class="product-img">
+              <img src="img/gallery/product-1.jpg" alt="Product">
+              <div class="add-to-cart-ico">
+                <i class="fa-solid fa-cart-shopping"></i>
+              </div>
+            </div>
+            <h4>Colour Roller</h4>
+            <span>$12.00</span>
+          </div>
+        </div>
+        <div class="col-xl-3">
+          <div class="product">
+            <div class="product-img">
+              <img src="img/gallery/product-1.jpg" alt="Product">
+              <div class="add-to-cart-ico">
+                <i class="fa-solid fa-cart-shopping"></i>
+              </div>
+            </div>
+            <h4>Colour Roller</h4>
+            <span>$12.00</span>
+          </div>
+        </div>
+        <div class="col-xl-3">
+          <div class="product">
+            <div class="product-img">
+              <img src="img/gallery/product-1.jpg" alt="Product">
+              <div class="add-to-cart-ico">
+                <i class="fa-solid fa-cart-shopping"></i>
+              </div>
+            </div>
+            <h4>Colour Roller</h4>
+            <span>$12.00</span>
+          </div>
+        </div>
+        <div class="col-xl-3">
+          <div class="product">
+            <div class="product-img">
+              <img src="img/gallery/product-1.jpg" alt="Product">
+              <div class="add-to-cart-ico">
+                <i class="fa-solid fa-cart-shopping"></i>
+              </div>
+            </div>
+            <h4>Colour Roller</h4>
+            <span>$12.00</span>
+          </div>
         </div>
       </div>
       <div class="row">
         <div class="col-xl-12">
           <nav class="news-nav" aria-label="Page navigation">
             <ul class="pagination justify-content-center">
-              <li class="page-item" data-filter=".p1"><a class="page-link" href="#">1</a></li>
+              <li class="page-item active" data-filter=".p1"><a class="page-link" href="#">1</a></li>
               <li class="page-item" data-filter=".p2"><a class="page-link" href="#">2</a></li>
               <li class="page-item"><a class="page-link" href="#"><i class="fa-solid fa-chevron-right"></i></a></li>
             </ul>
@@ -213,7 +324,7 @@
       </div>
     </div>
   </div>
-  <!----------------------- End of Recent Posts ----------------------->
+  <!----------------------- End of Shop ----------------------->
 
   <!----------------------- Start of Footer ----------------------->
   <footer>
@@ -303,6 +414,7 @@
   <script src="js/vendor/waypoints_2.0.3.min.js"></script>
   <script src="js/vendor/jquery.magnific-popup.min.js"></script>
   <script src="js/vendor/jquery.meanmenu.js"></script>
+  <script src="js/vendor/jquery.nice-select.min.js"></script>
   <script src="js/vendor/slick.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
