--- a/news.html
+++ b/news.html
@@ -204,7 +204,7 @@
         <div class="col-xl-12">
           <nav class="news-nav" aria-label="Page navigation">
             <ul class="pagination justify-content-center">
-              <li class="page-item" data-filter=".p1"><a class="page-link" href="#">1</a></li>
+              <li class="page-item active" data-filter=".p1"><a class="page-link" href="#">1</a></li>
               <li class="page-item" data-filter=".p2"><a class="page-link" href="#">2</a></li>
               <li class="page-item"><a class="page-link" href="#"><i class="fa-solid fa-chevron-right"></i></a></li>
             </ul>
