mobile menu & other minor bug fix

--- a/index-2.html
+++ b/index-2.html
@@ -223,7 +223,7 @@
             </div>
           </div>
         </div>
-        <div class="row masonry no-gutters">
+        <div class="row masonry no-gutters" id="lazyload">
           <div class="col-xl-4 col-lg-4 col-md-6 masonry-item c1 c4">
             <div class="portfolio-wrapper">
               <div class="portfolio-img">
@@ -303,7 +303,7 @@
   <!----------------------- End of Portfolio ----------------------->
 
   <!----------------------- Start of Team ----------------------->
-  <div class="team-section" id="career">
+  <div class="team-section">
     <div class="container">
       <div class="row">
         <div class="col-xl-12 text-center">
