--- a/index-3.html
+++ b/index-3.html
@@ -58,7 +58,7 @@
     <div class="header-bottom d-flex align-items-center">
       <div class="container">
         <div class="row">
-          <div class="col-xl-2 col-lg-2 col-md-3 col-sm-3 d-flex align-items-center hbr-left">
+          <div class="col-xl-2 col-lg-2 col-md-3 col-sm-3 d-flex align-items-center">
             <ul><li class="info-bar"><a href="#"><i class="fa-solid fa-bars"></i></a></li></ul>
           </div>
           <div class="col-xl-8 col-lg-8 col-md-6 col-sm-6 d-flex align-items-center justify-content-center hbr-center">
@@ -213,7 +213,7 @@
             </div>
           </div>
         </div>
-        <div class="row masonry no-gutters">
+        <div class="row masonry no-gutters" id="lazyload">
           <div class="col-xl-4 col-lg-4 col-md-6 masonry-item c1 c4">
             <div class="portfolio-wrapper">
               <div class="portfolio-img">
@@ -293,7 +293,7 @@
   <!----------------------- End of Portfolio ----------------------->
 
   <!----------------------- Start of Team ----------------------->
-  <div class="team-section" id="career">
+  <div class="team-section">
     <div class="container">
       <div class="row">
         <div class="col-xl-12 text-center">
