--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
           </div>
         </div>
       </div>
-      <div class="row masonry">
+      <div class="row masonry" id="lazyload">
         <div class="col-xl-4 col-lg-4 col-md-6 masonry-item c1 c4">
           <div class="portfolio-wrapper">
             <div class="portfolio-img">
