porfolio layout fix

--- a/index-3.html
+++ b/index-3.html
@@ -645,6 +645,7 @@
   <script src="js/vendor/waypoints_2.0.3.min.js"></script>
   <script src="js/vendor/jquery.magnific-popup.min.js"></script>
   <script src="js/vendor/jquery.meanmenu.js"></script>
+  <script src="js/vendor/imagesloaded.pkgd.min.js"></script>
   <script src="js/vendor/slick.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
