--- a/shop.html
+++ b/shop.html
@@ -418,5 +418,9 @@
   <script src="js/vendor/slick.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
+
+  <script>
+    $('select').niceSelect();
+  </script>
 </body>
 </html>
