--- a/index-3.html
+++ b/index-3.html
@@ -213,7 +213,7 @@
             </div>
           </div>
         </div>
-        <div class="row masonry no-gutters" id="lazyload">
+        <div class="row masonry no-gutters">
           <div class="col-xl-4 col-lg-4 col-md-6 masonry-item c1 c4">
             <div class="portfolio-wrapper">
               <div class="portfolio-img">
@@ -645,7 +645,6 @@
   <script src="js/vendor/waypoints_2.0.3.min.js"></script>
   <script src="js/vendor/jquery.magnific-popup.min.js"></script>
   <script src="js/vendor/jquery.meanmenu.js"></script>
-  <script src="js/vendor/imagesloaded.pkgd.min.js"></script>
   <script src="js/vendor/slick.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
