--- a/index-2.html
+++ b/index-2.html
@@ -95,7 +95,7 @@
                 </ul>
               </nav>
             </div>
-            <div class="header-btn"><a href="#">Get a quote</a></div>
+            <div class="header-btn"><a href="contact.html">Get a quote</a></div>
           </div>
         </div>
         <div class="mean-menu-custom">
